# loans254-program

./: Cargo.toml  README.md
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
tests/: helpers.rs  init_loan.rs  newfangled.rs  oo.rs  x.rs.txt
